FinalProj/src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <label>Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>